--- a/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-23
+:revdate: 2026-01-27
 :page-revdate: {revdate}
 :release-version: v2.12.6
 :rn-component-version: v2.12
@@ -31,20 +31,19 @@ endif::[]
 
 [IMPORTANT]
 ====
-If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. They can be corrected by either of two methods:
-
-* Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...)
-* Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
-
+ifeval::["{build-type}" != "community"]
+* {rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
+endif::[]
+* If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. They can be corrected by either of two methods:
+.. Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...)
+.. Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
++
 For more information see https://github.com/rancher/rancher/issues/48655[#48655].
 ====
 
-[IMPORTANT]
-====
-{rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
-====
+Rancher {release-version} is the latest patch release of Rancher {rn-component-version}. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
 
-For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/v2.12.0[v2.12.0 release notes].
+For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/{rn-component-version}.0[{rn-component-version}.0 release notes].
 
 == Changes Since v2.12.5
 
@@ -54,7 +53,7 @@ See the full list of https://github.com/rancher/rancher/compare/v2.12.5%E2%80%A6
 
 === Major Bug Fixes
 
-* Fixed an issue where the selection of pods in the Rancher UI (*Workloads > Pods*) would reset when the status of a pod changed. See https://github.com/rancher/dashboard/issues/16095[#16095]
+* Fixed an issue where the selection of pods in the Rancher UI (*Workloads > Pods*) would reset when the status of a pod changed. See https://github.com/rancher/dashboard/issues/16095[#16095].
 
 * Added additional improvements to reduce the amount of failed network requests when fetching resources shown in lists in the Rancher UI by reducing the length of the URL used in the request. This failure was more likely to happen when viewing resources in the local cluster as an administrator. See https://github.com/rancher/dashboard/issues/16217[#16217].
 
@@ -64,27 +63,14 @@ If you're installing Rancher for the first time, your environment must fulfill t
 
 [IMPORTANT]
 ====
-Rancher now requires the cluster it runs on to have the https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/apiserver-aggregation/[Kubernetes API Aggregation Layer] enabled. This is because Rancher extends Kubernetes with additional APIs by registering its own extension API server. Please note that all versions of Kubernetes supported in this Rancher versions K8s distributions (RKE2/K3s) will have the aggregation layer configured and enabled by default. 
-
-Refer to the {rn-aggregation-layer-is-required}[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
-====
-
-[IMPORTANT]
-====
-Rancher Kubernetes Engine (RKE/RKE1) has reached end of life as of *July 31, 2025*. Rancher versions 2.12.0 and later no longer support provisioning or managing downstream RKE1 clusters. We recommend replatforming RKE1 clusters to RKE2 to ensure continued support and security updates. Learn more about the transition https://www.suse.com/support/kb/doc/?id=000021518[here].
-Rancher now has a pre-upgrade validation check for RKE1 resources which fails and lists the RKE1 resources if present. Refer to https://github.com/rancher/rancher/issues/50286[#50286] for more information.
-====
-
-[IMPORTANT]
-====
-It is crucial that you review the available disk space on your nodes and plan accordingly before upgrading to Rancher v2.12.0 and later to avoid potential disk pressure and pod eviction issues.
-
-For additional information refer to the {rn-disk-space}[UI Server Side Pagination - Disk Space documentation].
-====
-
-[IMPORTANT]
-====
-Rancher now has an enablement option called {rn-viewing-api-audit-logs}[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation. In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the {rn-enable-api-audit-log}[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
+* Rancher now requires the cluster it runs on to have the https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/apiserver-aggregation/[Kubernetes API Aggregation Layer] enabled. This is because Rancher extends Kubernetes with additional APIs by registering its own extension API server. Please note that all versions of Kubernetes supported in this Rancher versions K8s distributions (RKE2/K3s) will have the aggregation layer configured and enabled by default. 
+** Refer to the {rn-aggregation-layer-is-required}[Extension API Server documentation] and https://github.com/rancher/rancher/issues/50400[#50400] for more information.
+* Rancher Kubernetes Engine (RKE/RKE1) has reached end of life as of *July 31, 2025*. Rancher versions 2.12.0 and later no longer support provisioning or managing downstream RKE1 clusters. We recommend replatforming RKE1 clusters to RKE2 to ensure continued support and security updates. Learn more about the transition https://www.suse.com/support/kb/doc/?id=000021518[here].
+** Rancher now has a pre-upgrade validation check for RKE1 resources which fails and lists the RKE1 resources if present. Refer to https://github.com/rancher/rancher/issues/50286[#50286] for more information.
+* It is crucial that you review the available disk space on your nodes and plan accordingly before upgrading to Rancher v2.12.0 and later to avoid potential disk pressure and pod eviction issues.
+** For additional information refer to the {rn-disk-space}[UI Server Side Pagination - Disk Space documentation].
+* Rancher now has an enablement option called {rn-viewing-api-audit-logs}[`AUDIT_LOG_ENABLED`] for API Audit Logs for a Rancher installation.
+** In Rancher versions 2.11.x and earlier, only the `AUDIT_LEVEL` could be set and the default log level (`0`) would disable the audit log. In Rancher versions 2.12.x and later, the default log level (`0`) now only contains the log request and response metadata, and can be set when configuring `AUDIT_LOG_ENABLED`. If installing or upgrading via Helm you can enable the API Audit Logs and specify the log level by applying the following setting to your Helm command: `--set auditLog.enabled=true --set auditLog.level=0`. See the {rn-enable-api-audit-log}[Enabling the API Audit Log to Record System Events] documentation and https://github.com/rancher/rancher/issues/48941[#48941].
 ====
 
 === Changes in Image Artifacts
@@ -110,11 +96,11 @@ Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up u
 
 == Versions
 
-== Images
+=== Images
 
 * rancher/rancher:{release-version}
 
-== Tools
+=== Tools
 
 * CLI - https://github.com/rancher/cli/releases/tag/{release-version}[{release-version}]
 
