--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.2.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-26
+:revdate: 2026-01-27
 :page-revdate: {revdate}
 :release-version: v2.13.2
 :rn-component-version: v2.13
@@ -44,13 +44,15 @@ For more information, see https://github.com/rancher/rancher/issues/48655[#48655
 
 ifeval::["{build-type}" == "community"]
 Rancher {release-version} is the latest patch release of Rancher. This is a Community version release that introduces maintenance updates and bug fixes.
+
+For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/{rn-component-version}.0[{rn-component-version}.0 release notes].
 endif::[]
 
 ifeval::["{build-type}" != "community"]
 Rancher {release-version} is the latest patch release of Rancher. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
-endif::[]
 
-For more information on new features in the general minor release, see the https://github.com/rancher/rancher/releases/tag/{rn-component-version}.0[{rn-component-version}.0 release notes].
+For more information on new features in the general minor release, see the xref:release-notes/{rn-component-version}.1.adoc[{rn-component-version}.1 release notes].
+endif::[]
 
 ifeval::["{build-type}" != "community"]
 == What's New - SUSE Rancher Prime {release-version}
