--- a/versions/v2.10/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.10/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -23,6 +23,11 @@ Rancher 将 Rancher-Webhook 作为单独的 deployment 和服务部署在 local 
 | &check;
 | N/A
 
+| v2.10.10
+| v0.6.11
+| &check;
+| N/A
+
 | v2.10.9
 | v0.6.10
 | &check;
