--- a/versions/v2.13/modules/en/pages/faq/container-network-interface-providers.adoc
+++ b/versions/v2.13/modules/en/pages/faq/container-network-interface-providers.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-18
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 :description: Learn about Container Network Interface (CNI), the CNI providers Rancher provides, the features they offer, and how to choose a provider for you
 
@@ -92,7 +92,7 @@ Kubernetes workers should open UDP port `8472` (VXLAN) and TCP port `9099` (heal
 
 image::canal-diagram.png[]
 
-For more information, see the https://github.com/projectcalico/canal[Canal GitHub Page.]
+For more information, refer to the https://github.com/rancher/rke2-charts/tree/main-source/packages/rke2-canal[Rancher maintained Canal source] and the https://github.com/projectcalico/canal[Canal GitHub Page].
 
 ==== Cilium
 
