--- a/versions/v2.9/modules/en/pages/faq/container-network-interface-providers.adoc
+++ b/versions/v2.9/modules/en/pages/faq/container-network-interface-providers.adoc
@@ -1,6 +1,6 @@
 = Container Network Interface (CNI) Providers
 :page-languages: [en, zh]
-:revdate: 2025-03-03
+:revdate: 2026-01-26
 :page-revdate: {revdate}
 :description: Learn about Container Network Interface (CNI), the CNI providers Rancher provides, the features they offer, and how to choose a provider for you
 
@@ -62,7 +62,7 @@ Kubernetes workers should open UDP port `8472` (VXLAN) and TCP port `9099` (heal
 
 image::canal-diagram.png[]
 
-For more information, see the https://github.com/projectcalico/canal[Canal GitHub Page.]
+For more information, refer to the https://github.com/rancher/rke2-charts/tree/main-source/packages/rke2-canal[Rancher maintained Canal source] and the https://github.com/projectcalico/canal[Canal GitHub Page].
 
 ==== Flannel
 
