Fix table entries labeling v2.11.10 release as community

--- a/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.11/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -20,7 +20,7 @@ NOTE: Rancher manages deployment and upgrade of the webhook. Under most circumst
 | v2.11.10
 | v0.7.8
 | &#10003;
-| &#10003;
+| &cross;
 
 | v2.11.9
 | v0.7.8
