--- a/versions/v2.11/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.11/modules/zh/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -20,7 +20,7 @@ Rancher 将 Rancher-Webhook 作为单独的 deployment 和服务部署在 local 
 | v2.11.10
 | v0.7.8
 | &#10003;
-| &#10003;
+| &cross;
 
 | v2.11.9
 | v0.7.8
