--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -35,11 +35,9 @@ ifeval::["{build-type}" != "community"]
 * The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 * {rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 endif::[]
-* If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. They can be corrected by either of two methods:
-.. Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...).
-.. Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
-+
-For more information, see https://github.com/rancher/rancher/issues/48655[#48655].
+* If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. For more information, see https://github.com/rancher/rancher/issues/48655[#48655]. These issues can be corrected by either of two methods:
+** Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...).
+** Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
 ====
 
 ifeval::["{build-type}" == "community"]
