Apply suggestions from code review

--- a/versions/v2.12/modules/en/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes/v2.12.6.adoc
@@ -34,11 +34,9 @@ endif::[]
 ifeval::["{build-type}" != "community"]
 * {rn-istio}[Rancher-Istio] has been deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions). Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 endif::[]
-* If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. They can be corrected by either of two methods:
-.. Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...)
-.. Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
-+
-For more information see https://github.com/rancher/rancher/issues/48655[#48655].
+* If you are using Active Directory Federation Service (AD FS), upgrading to Rancher v2.10.1 or later may cause issues with authentication, requiring manual intervention. These issues are due to the AD FS Relying Party Trust not being able to pick up a signature verification certificate from the metadata. For more information, see https://github.com/rancher/rancher/issues/48655[#48655]. These issues can be corrected by either of two methods:
+** Updating the Relying Party Trust information from federation metadata (Relying Party Trust -> Update from Federation Metadata...).
+** Directly adding the certificate (Relying Party Trust -> Properties -> Signature tab -> Add -> Select the certificate).
 ====
 
 Rancher {release-version} is the latest patch release of Rancher {rn-component-version}. This is a Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
