Add release-notes-v2.11.10 (#674)
* Add release-notes-v2.11.10

* Use attributes for links

* Update per review

* Update versions/v2.11/modules/en/pages/release-notes/v2.11.10.adoc

Co-authored-by: Sunil Singh <sunil.singh@suse.com>

* Update versions/v2.11/modules/en/pages/release-notes/v2.11.10.adoc

* Edit per updates in v2.12

---------

Co-authored-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.11/modules/en/nav.adoc
+++ b/versions/v2.11/modules/en/nav.adoc
@@ -1,5 +1,8 @@
 * xref:release-notes.adoc[Release Notes]
+ifeval::["{build-type}" != "community"]
+** xref:release-notes/v2.11.10.adoc[]
 ** xref:release-notes/v2.11.9.adoc[]
+endif::[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
