--- a/versions/v2.11/modules/zh/nav.adoc
+++ b/versions/v2.11/modules/zh/nav.adoc
@@ -1,4 +1,5 @@
 * xref:release-notes.adoc[Release Notes]
+** xref:release-notes/v2.11.10.adoc[]
 ** xref:release-notes/v2.11.9.adoc[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
