Update CVE info for v2.13.2

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -52,6 +52,15 @@ Rancher {release-version} is the latest patch release of Rancher. This is a Prim
 For more information on new features in the general minor release, see the xref:release-notes/{rn-component-version}.1.adoc[{rn-component-version}.1 release notes].
 endif::[]
 
+== Security Fixes for Rancher Vulnerabilities
+
+This release addresses the following Rancher security issue:
+
+* Rancher now provides new versions of the Rancher Backup chart which prevent the leak of secret S3 credentials via the Rancher Backup pod log. For more information, refer to https://github.com/rancher/backup-restore-operator/security/advisories/GHSA-wj3p-5h3x-c74q[CVE-2025-62879].
+* Rancher now removes the ability to fetch CA certificates stored in Rancher’s setting `cacerts` when using the `login` command. For more information, refer to https://github.com/rancher/rancher/security/advisories/GHSA-mc24-7m59-4q5p[CVE-2025-67601].
+
+For additional details, see the Security Advisories and CVEs page in Rancher's https://ranchermanager.docs.rancher.com/{rn-component-version}/reference-guides/rancher-security/security-advisories-and-cves[documentation] or in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[repository].
+
 ifeval::["{build-type}" != "community"]
 == What's New - SUSE Rancher Prime {release-version}
 
