--- a/versions/v2.12/modules/en/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/en/pages/release-notes/v2.12.6.adoc
@@ -47,6 +47,15 @@ For more information on new features in the general minor release, see the https
 
 See the full list of https://github.com/rancher/rancher/compare/v2.12.5%E2%80%A6{release-version}[changes].
 
+== Security Fixes for Rancher Vulnerabilities
+
+This release addresses the following Rancher security issue:
+
+* Rancher now provides new versions of the Rancher Backup chart which prevent the leak of secret S3 credentials via the Rancher Backup pod log. For more information, refer to https://github.com/rancher/backup-restore-operator/security/advisories/GHSA-wj3p-5h3x-c74q[CVE-2025-62879].
+* Rancher now removes the ability to fetch CA certificates stored in Rancher’s setting `cacerts` when using the `login` command. For more information, refer to https://github.com/rancher/rancher/security/advisories/GHSA-mc24-7m59-4q5p[CVE-2025-67601].
+
+For additional details, see the Security Advisories and CVEs page in Rancher's xref:security/cve.adoc[documentation] or in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[repository].
+
 == Rancher App (Global UI)
 
 === Major Bug Fixes
