--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.2.adoc
@@ -64,7 +64,7 @@ For additional details, see the Security Advisories and CVEs page in Rancher's h
 endif::[]
 
 ifeval::["{build-type}" != "community"]
-For additional details, see the Security Advisories and CVEs page in Rancher's xref:security/cve.adoc[documentation] or in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[repository].
+For additional details, see the Security Advisories and CVEs page in Rancher's xref:security/cves.adoc[documentation] or in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[repository].
 endif::[]
 
 ifeval::["{build-type}" != "community"]
