--- a/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
+++ b/versions/v2.12/modules/zh/pages/release-notes/v2.12.6.adoc
@@ -54,7 +54,7 @@ This release addresses the following Rancher security issue:
 * Rancher now provides new versions of the Rancher Backup chart which prevent the leak of secret S3 credentials via the Rancher Backup pod log. For more information, refer to https://github.com/rancher/backup-restore-operator/security/advisories/GHSA-wj3p-5h3x-c74q[CVE-2025-62879].
 * Rancher now removes the ability to fetch CA certificates stored in Rancher’s setting `cacerts` when using the `login` command. For more information, refer to https://github.com/rancher/rancher/security/advisories/GHSA-mc24-7m59-4q5p[CVE-2025-67601].
 
-For additional details, see the Security Advisories and CVEs page in Rancher's xref:security/cve.adoc[documentation] or in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[repository].
+For additional details, see the Security Advisories and CVEs page in Rancher's xref:security/cves.adoc[documentation] or in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[repository].
 
 == Rancher App (Global UI)
 
