--- a/versions/v2.11/modules/en/pages/release-notes.adoc
+++ b/versions/v2.11/modules/en/pages/release-notes.adoc
@@ -1,6 +1,6 @@
 = Release Notes
 :page-languages: [en, zh]
-:revdate: 2026-01-28
+:revdate: 2026-02-02
 :page-revdate: {revdate}
 
 == Current Version
@@ -10,7 +10,7 @@
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. CURRENT VERSION.
 | v2.11.10
-| xref:release-notes/v2.11.10.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.11.10[GitHub Release]
+| xref:release-notes/v2.11.10.adoc[View]
 | N/A
 | &#10003;
 | N/A
