--- a/versions/v2.10/modules/en/pages/release-notes.adoc
+++ b/versions/v2.10/modules/en/pages/release-notes.adoc
@@ -1,6 +1,6 @@
 = Release Notes
 :page-languages: [en, zh]
-:revdate: 2026-01-22
+:revdate: 2026-02-02
 :page-revdate: {revdate}
 
 == Current Version
@@ -9,7 +9,7 @@
 | Version | Release Notes | Support Matrix | Prime | Community
 
 | v2.10.11
-| https://github.com/rancher/rancher/releases/tag/v2.10.11[View]
+| xref:release-notes/v2.10.11.adoc[View]
 | N/A
 | &#10003;
 | N/A
