--- a/versions/v2.10/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.10/modules/zh/pages/release-notes.adoc
@@ -1,6 +1,6 @@
 = 发版说明
 :page-languages: [en, zh]
-:revdate: 2026-01-22
+:revdate: 2026-02-02
 :page-revdate: {revdate}
 
 == 当前版本
@@ -9,7 +9,7 @@
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.10.11
-| https://github.com/rancher/rancher/releases/tag/v2.10.11[View]
+| xref:release-notes/v2.10.11.adoc[View]
 | N/A
 | &#10003;
 | N/A
