--- a/versions/v2.13/modules/en/pages/about-rancher/what-is-rancher.adoc
+++ b/versions/v2.13/modules/en/pages/about-rancher/what-is-rancher.adoc
@@ -1,8 +1,13 @@
+ifeval::["{build-type}" != "community"]
 = What is {rancher-product-name}?
+endif::[]
+ifeval::["{build-type}" == "community"]
+= What is {rancher-short-name}?
+endif::[]
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2026-02-05
 :page-revdate: {revdate}
 :description: Rancher adds significant value on top of Kubernetes: managing hundreds of clusters from one interface, centralizing RBAC, enabling monitoring and alerting. Read more.
 :sidebar_label: What is Rancher?
