Sync Community PR #2055 (Fix difference beteween psa-config-templates.md and psa-restricted-exemptions.md)

--- a/versions/v2.11/modules/en/pages/security/sample-psact.adoc
+++ b/versions/v2.11/modules/en/pages/security/sample-psact.adoc
@@ -1,6 +1,6 @@
 = Sample PodSecurityConfiguration
 :page-languages: [en, zh]
-:revdate: 2025-03-12
+:revdate: 2026-02-09
 :page-revdate: {revdate}
 
 The following PodSecurityConfiguration contains the required Rancher namespace exemptions for a `rancher-restricted` cluster to run properly.
@@ -53,6 +53,7 @@ plugins:
                      cert-manager,
                      cis-operator-system,
                      fleet-default,
+                     fleet-local,
                      ingress-nginx,
                      istio-system,
                      kube-node-lease,
@@ -61,5 +62,6 @@ plugins:
                      longhorn-system,
                      rancher-alerting-drivers,
                      security-scan,
+                     sr-operator-system,
                      tigera-operator]
 ----
