--- a/versions/v2.12/modules/en/pages/security/sample-psact.adoc
+++ b/versions/v2.12/modules/en/pages/security/sample-psact.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2026-02-09
 :page-revdate: {revdate}
 
 The following PodSecurityConfiguration contains the required Rancher namespace exemptions for a `rancher-restricted` cluster to run properly.
@@ -55,6 +55,7 @@ plugins:
                      cert-manager,
                      cis-operator-system,
                      fleet-default,
+                     fleet-local,
                      ingress-nginx,
                      istio-system,
                      kube-node-lease,
@@ -63,5 +64,6 @@ plugins:
                      longhorn-system,
                      rancher-alerting-drivers,
                      security-scan,
+                     sr-operator-system,
                      tigera-operator]
 ----
