--- a/versions/v2.13/modules/zh/pages/security/sample-psact.adoc
+++ b/versions/v2.13/modules/zh/pages/security/sample-psact.adoc
@@ -1,6 +1,6 @@
 = PodSecurityConfiguration 示例
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2026-02-09
 :page-revdate: {revdate}
 
 以下 PodSecurityConfiguration 包含了 `rancher-restricted` 集群正常运行所需的 Rancher 命名空间豁免。
@@ -52,6 +52,7 @@ plugins:
                      cert-manager,
                      cis-operator-system,
                      fleet-default,
+                     fleet-local,
                      ingress-nginx,
                      istio-system,
                      kube-node-lease,
@@ -60,5 +61,6 @@ plugins:
                      longhorn-system,
                      rancher-alerting-drivers,
                      security-scan,
+                     sr-operator-system,
                      tigera-operator]
 ----
