Add note/steps for upgrading from Rancher v2.13.1

--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-26
+:revdate: 2026-02-12
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades 
 :product-path: installation-and-upgrade/upgrades
@@ -133,17 +133,55 @@ If you are upgrading cert-manager to the latest version from v1.5 or below, foll
 
 ==== Steps to Upgrade Rancher
 
-Upgrade Rancher to the latest version with all your settings.
 
-Take all the values from the previous step and append them to the command using `--set key=value`.
+[IMPORTANT]
+.Upgrading from Rancher v2.13.1
+====
+In Rancher v2.13.2, the Helm chart name has reverted from `rancher-prime` back to `rancher`. If you are upgrading from v2.13.1, the existing Ingress resource created by the previous chart will conflict with the new one, causing the upgrade to fail with an error similar to:
 
-include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+[,shell]
+----
+Error: UPGRADE FAILED: failed to create resource: admission webhook "validate.nginx.ingress.kubernetes.io" denied the request: host "<HOSTNAME>" and path "/" is already defined in ingress cattle-system/rancher-rancher-prime
+----
 
+To prevent or resolve this issue, you must manually delete the old Ingress before completing the upgrade:
+
+. Export your current Helm values to ensure all settings (like hostname and private CA data) are preserved:
++
+[,shell]
+----
+helm get values rancher -n cattle-system -o yaml > rancher-values.yaml
+----
+
+. Delete the conflicting Ingress resource:
++
+[,shell]
+----
+kubectl delete ingress rancher-rancher-prime -n cattle-system
+----
+
+. Run the upgrade command using the updated chart reference:
++
+[,shell]
 ----
 helm upgrade rancher rancher-prime/rancher \
   --namespace cattle-system \
-  --set hostname=rancher.my.org
+  -f rancher-values.yaml \
+  --set hostname=rancher.my.org \
+  --version "~2.13.2"
 ----
+
+. After the upgrade completes, verify that the new ingress has been successfully created and is pointing to the correct hostname:
++
+[,shell]
+----
+kubectl get ingress -n cattle-system rancher
+----
+====
+
+Upgrade Rancher to the latest version with all your settings.
+
+Take all the values from the previous step and append them to the command using `--set key=value`.
 
 [NOTE]
 ====
