Adding missing community only pages - v2.13
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc
@@ -10,7 +10,7 @@ endif::[]
 
 [WARNING]
 ====
-Docker installs are not supported in production environments. These instructions are provided for testing and development purposes only. Please don't use this method to install Rancher in production environments.
+**Docker installs are not supported in production environments.** These instructions are provided for testing and development purposes only. Please don't use this method to install Rancher in production environments.
 ====
 
 Rancher can be installed by running a single Docker container.
@@ -58,11 +58,11 @@ For security purposes, SSL (Secure Sockets Layer) is required when using Rancher
 
 Choose from the following options:
 
-* <<option-a-default-rancher-generated-self-signed-certificate,Option A: Default Rancher-generated Self-signed Certificate>>
-* <<option-b-bring-your-own-certificate-self-signed,Option B: Bring Your Own Certificate, Self-signed>>
-* <<option-c-bring-your-own-certificate-signed-by-a-recognized-ca,Option C: Bring Your Own Certificate, Signed by a Recognized CA>>
-* <<option-d-lets-encrypt-certificate,Option D: Let's Encrypt Certificate>>
-* <<option-e-localhost-tunneling-no-certificate,Option E: Localhost tunneling, no Certificate>>
+* <<Option A: Default Rancher-generated Self-signed Certificate,Option A: Default Rancher-generated Self-signed Certificate>>
+* <<Option B: Bring Your Own Certificate, Self-signed,Option B: Bring Your Own Certificate, Self-signed>>
+* <<Option C: Bring Your Own Certificate, Signed by a Recognized CA,Option C: Bring Your Own Certificate, Signed by a Recognized CA>>
+* <<Option D: Let's Encrypt Certificate,Option D: Let's Encrypt Certificate>>
+* <<Option E: Localhost tunneling, no Certificate,Option E: Localhost tunneling, no Certificate>>
 
 === Option A: Default Rancher-generated Self-signed Certificate
 
