--- a/community-docs/v2.13/modules/ROOT/pages/how-to-guides/advanced-user-guides/monitoring-alerting-guides/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/how-to-guides/advanced-user-guides/monitoring-alerting-guides/index.adoc
@@ -1,1 +1,15 @@
-TODO - CONVERT FILE
+= Monitoring/Alerting Guides
+ifeval::["{build-type}" != "srfa"]
+:page-languages: [en, zh]
+endif::[]
+:revdate: 2026-02-11
+:page-revdate: {revdate}
+:community-path: how-to-guides/advanced-user-guides/monitoring-alerting-guides/monitoring-alerting-guides
+:product-path:
+
+* xref:enable-monitoring.adoc[Enable monitoring]
+* xref:uninstall-monitoring.adoc[Uninstall monitoring]
+* xref:set-up-monitoring-for-workloads.adoc[Monitoring workloads]
+* xref:customize-grafana-dashboard.adoc[Customizing Grafana dashboards]
+* xref:create-persistent-grafana-dashboard.adoc[Persistent Grafana dashboards]
+* xref:debug-high-memory-usage.adoc[Debugging high memory usage]
