--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/cli-with-rancher/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/cli-with-rancher/index.adoc
@@ -1,1 +1,10 @@
-TODO - CONVERT FILE
+= CLI with Rancher
+ifeval::["{build-type}" != "srfa"]
+:page-languages: [en, zh]
+endif::[]
+:revdate: 2026-02-11
+:page-revdate: {revdate}
+:community-path: reference-guides/cli-with-rancher/cli-with-rancher
+:product-path:
+
+Interact with Rancher using command line interface (CLI) tools from your workstation. The following docs will describe the xref:rancher-cli.adoc[Rancher CLI] and xref:kubectl-utility.adoc[kubectl Utility].
