--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/rancher-server-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/rancher-server-configuration/index.adoc
@@ -1,1 +1,16 @@
-TODO - CONVERT FILE
+= Rancher Server Configuration
+ifeval::["{build-type}" != "srfa"]
+:page-languages: [en, zh]
+endif::[]
+:revdate: 2026-02-11
+:page-revdate: {revdate}
+:community-path: reference-guides/cluster-configuration/rancher-server-configuration/rancher-server-configuration
+:product-path:
+
+* xref:rke2-cluster-configuration.adoc[RKE2 Cluster Configuration]
+* xref:k3s-cluster-configuration.adoc[K3s Cluster Configuration]
+* xref:eks-cluster-configuration.adoc[EKS Cluster Configuration]
+* xref:aks-cluster-configuration.adoc[AKS Cluster Configuration]
+* xref:gke-cluster-configuration/gke-cluster-configuration.adoc[GKE Cluster Configuration]
+* xref:use-existing-nodes/use-existing-nodes.adoc[Use Existing Nodes]
+* xref:sync-clusters.adoc[Sync Clusters]
