--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/system-tools.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/system-tools.adoc
@@ -1,1 +1,36 @@
-TODO - CONVERT FILE
+= System Tools
+ifeval::["{build-type}" != "srfa"]
+:page-languages: [en, zh]
+endif::[]
+:revdate: 2026-02-11
+:page-revdate: {revdate}
+:community-path: reference-guides/system-tools
+:product-path:
+
+[NOTE]
+====
+System Tools has been deprecated since June 2022.
+====
+
+
+== Logs
+
+Please use https://github.com/rancherlabs/support-tools/tree/master/collection/rancher/v2.x/logs-collector[logs-collector] to collect logs from your cluster.
+
+== Stats
+
+If you want to replicate the stats command, you can run the following command on your cluster nodes:
+
+[NOTE]
+====
+This command below requires the package `sysstat` on the cluster node.
+====
+
+[,shell]
+====
+/usr/bin/sar -u -r -F 1 1
+====
+
+== Remove
+
+Please use the https://github.com/rancher/rancher-cleanup[Rancher Cleanup] tool.
