Update nav files for product specific pages

--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -89,7 +89,7 @@ ifeval::["{build-type}" != "srfa"]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
 endif::[]
 * xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
-ifeval::["{build-type}" != "srfa"]
+ifeval::["{build-type}" == "product"]
 ** xref:rancher-admin/scc-registration.adoc[]
 endif::[]
 ** User Management
