--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -1,6 +1,8 @@
 * xref:release-notes.adoc[Release Notes]
+ifeval::["{build-type}" != "community"]
 ** xref:release-notes/v2.13.2.adoc[]
 ** xref:release-notes/v2.13.1.adoc[]
+endif::[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
@@ -87,7 +89,7 @@ ifeval::["{build-type}" != "srfa"]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
 endif::[]
 * xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
-ifeval::["{build-type}" != "srfa"]
+ifeval::["{build-type}" == "product"]
 ** xref:rancher-admin/scc-registration.adoc[]
 endif::[]
 ** User Management
