--- a/versions/v2.10/modules/zh/nav.adoc
+++ b/versions/v2.10/modules/zh/nav.adoc
@@ -1,5 +1,7 @@
 * xref:release-notes.adoc[Release Notes]
+ifeval::["{build-type}" != "community"]
 ** xref:release-notes/v2.10.11.adoc[]
+endif::[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
