--- a/versions/v2.13/modules/zh/nav.adoc
+++ b/versions/v2.13/modules/zh/nav.adoc
@@ -1,6 +1,8 @@
 * xref:release-notes.adoc[Release Notes]
+ifeval::["{build-type}" != "community"]
 ** xref:release-notes/v2.13.1.adoc[]
 ** xref:release-notes/v2.13.2.adoc[]
+endif::[]
 * About Rancher
 ** xref:about-rancher/what-is-rancher.adoc[]
 ** xref:about-rancher/prime.adoc[]
@@ -85,7 +87,9 @@
 *** xref:installation-and-upgrade/troubleshooting/certificate-troubleshooting.adoc[]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
 * xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
+ifeval::["{build-type}" == "product"]
 ** xref:rancher-admin/scc-registration.adoc[]
+endif::[]
 ** User Management
 *** xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc[]
