--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -1,4 +1,5 @@
 * xref:release-notes.adoc[Release Notes]
+** xref:release-notes/v2.13.3.adoc[]
 ** xref:release-notes/v2.13.2.adoc[]
 ** xref:release-notes/v2.13.1.adoc[]
 * About Rancher
