--- a/versions/v2.12/modules/zh/nav.adoc
+++ b/versions/v2.12/modules/zh/nav.adoc
@@ -1,4 +1,5 @@
 * xref:release-notes.adoc[Release Notes]
+** xref:release-notes/v2.12.7.adoc[]
 ** xref:release-notes/v2.12.6.adoc[]
 ** xref:release-notes/v2.12.5.adoc[]
 * About Rancher
