--- a/versions/v2.12/modules/en/nav.adoc
+++ b/versions/v2.12/modules/en/nav.adoc
@@ -1,5 +1,6 @@
 * xref:release-notes.adoc[Release Notes]
 ifeval::["{build-type}" != "community"]
+** xref:release-notes/v2.12.7.adoc[]
 ** xref:release-notes/v2.12.6.adoc[]
 ** xref:release-notes/v2.12.5.adoc[]
 endif::[]
