Single source Technical FAQ page

--- a/versions/v2.13/modules/zh/pages/faq/technical-items.adoc
+++ b/versions/v2.13/modules/zh/pages/faq/technical-items.adoc
@@ -18,12 +18,14 @@ Kubernetes 安装（Helm）：
  New password for default administrator (user-xxxxx):
  <new_password>
 
+ifeval::["{build-type}" == "product"]
 Kubernetes 安装 (Helm - *Applicable to Rancher Prime v2.13.1*):
 
  $ KUBECONFIG=./kube_config_cluster.yml
  $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher-prime --no-headers | head -1 | awk '{ print $1 }') -c rancher-prime -- reset-password
  New password for default administrator (user-xxxxx):
  <new_password>
+endif::[]
 
 == 我删除/停用了最后一个 admin，该如何解决？
 
@@ -41,12 +43,14 @@ Kubernetes 安装（Helm）：
  New password for default administrator (user-xxxxx):
  <new_password>
 
+ifeval::["{build-type}" == "product"]
 Kubernetes 安装（Helm - - *Applicable to Rancher Prime v2.13.1*）：
 
  $ KUBECONFIG=./kube_config_cluster.yml
  $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher-prime | grep '1/1' | head -1 | awk '{ print $1 }') -- ensure-default-admin
  New password for default administrator (user-xxxxx):
  <new_password>
+endif::[]
 
 == 如何启用调试日志记录？
 
