--- a/versions/v2.13/modules/en/pages/faq/technical-items.adoc
+++ b/versions/v2.13/modules/en/pages/faq/technical-items.adoc
@@ -22,12 +22,14 @@ Kubernetes install (Helm):
  New password for default administrator (user-xxxxx):
  <new_password>
 
+ifeval::["{build-type}" == "product"]
 Kubernetes install (Helm - *Applicable to Rancher Prime v2.13.1*):
 
  $ KUBECONFIG=./kube_config_cluster.yml
  $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher-prime --no-headers | head -1 | awk '{ print $1 }') -c rancher-prime -- reset-password
  New password for default administrator (user-xxxxx):
  <new_password>
+endif::[]
 
 == I deleted/deactivated the last admin, how can I fix it?
 
@@ -45,12 +47,14 @@ Kubernetes install (Helm):
  New password for default administrator (user-xxxxx):
  <new_password>
 
+ifeval::["{build-type}" == "product"]
 Kubernetes install (Helm - *Applicable to Rancher Prime v2.13.1*):
 
  $ KUBECONFIG=./kube_config_cluster.yml
  $ kubectl --kubeconfig $KUBECONFIG -n cattle-system exec $(kubectl --kubeconfig $KUBECONFIG -n cattle-system get pods -l app=rancher-prime | grep '1/1' | head -1 | awk '{ print $1 }') -- ensure-default-admin
  New password for default administrator (user-xxxxx):
  <new_password>
+endif::[]
 
 == How can I enable debug logging?
 
