Single source 2.9-v2.13 4. Install SUSE Rancher Prime page

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -26,6 +26,8 @@ Rancher recommends installing Rancher on a Kubernetes cluster. A highly availabl
 From a system that has access to the internet, fetch the latest Helm chart and copy the resulting manifests to a system that has access to the Rancher server cluster.
 
 . If you haven't already, install `helm` locally on a workstation that has internet access. Note: Refer to the xref:installation-and-upgrade/requirements/helm-version-requirements.adoc[Helm version requirements] to choose a version of Helm to install Rancher.
+
+ifeval::["{build-type}" == "product"]
 . Use the `helm repo add` command to add the Helm chart repository that contains charts to install Rancher Prime.
 +
 [,shell]
@@ -34,7 +36,36 @@ helm repo add rancher-prime <helm-chart-repo-url>
 ----
 +
 include::shared:ROOT:partial$en/helm-chart-repo-url.adoc[]
+endif::[]
 
+ifeval::["{build-type}" == "community"]
+. Use `helm repo add` command to add the Helm chart repository that contains charts to install Rancher. For more information about the repository choices and which is best for your use case, see xref:resources/choose-a-rancher-version.adoc[Choosing a Rancher Version].
+
+** Latest: Recommended for trying out the newest features.
++
+----
+helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
+----
+
+** Stable: Recommended for production environments.
++
+----
+helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
+----
+
+** Alpha: Experimental preview of upcoming releases.
++
+----
+helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
+----
++
+[NOTE]
+====
+Upgrades are not supported to, from, or between Alphas.
+====
+endif::[]
+
+ifeval::["{build-type}" == "product"]
 . Fetch the Rancher Prime chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
 ** To fetch the latest version:
 +
@@ -44,19 +75,36 @@ helm fetch rancher-prime/rancher
 ----
 ** To fetch a specific version:
 +
-Check to see which version of Rancher Prime are available.
+.. Check to see which version of Rancher Prime are available.
 +
 [,shell]
 ----
 helm search repo --versions rancher-prime
 ----
 +
-Fetch a specific version by specifying the `--version` parameter:
+.. Fetch a specific version by specifying the `--version` parameter:
 +
 [,shell]
 ----
 helm fetch rancher-prime/rancher --version=<version>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+. Fetch the latest Rancher chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
++
+[,plain]
+----
+ helm fetch rancher-<CHART_REPO>/rancher
+----
++
+If you require a specific version of Rancher, you can fetch this with the Helm `--version` parameter like in the following example:
++
+[,plain]
+----
+ helm fetch rancher-stable/rancher --version=v2.4.8
+----
+endif::[]
 
 === 2. Choose your SSL Configuration
 
